# X-Player

./: README.md  settings.gradle
app/: build.gradle
app/src/androidTest/java/com/gx/player/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
app/src/main/cpp/ffmpeg/include/libavcodec/: avcodec.h  codec.h  vaapi.h
app/src/main/cpp/ffmpeg/include/libavformat/: avformat.h
app/src/main/cpp/ffmpeg/include/libavutil/: ffversion.h  pixfmt.h
app/src/main/cpp/ffmpeg/include/libpng/: Android.mk  Application.mk  example.c  png.c  png.h  pngconf.h  pngpriv.h  pngrtran.c  pngtest.c  pngwrite.c  pngwutil.c
app/src/main/cpp/jsoncpp/: json_value.cpp
app/src/main/cpp/player/: decode_state.h
app/src/main/cpp/player/decoder/: base_decoder.cpp  base_decoder.h
app/src/main/cpp/player/decoder/audio/: audio_decoder.cpp  audio_decoder.h
app/src/main/cpp/player/decoder/video/: video_decoder.cpp  video_decoder.h
app/src/main/cpp/player/player/: Player.cpp  Player.h
app/src/main/cpp/utils/: logger.h
app/src/main/cpp/utils/callback/: callback.cpp  callback.h
app/src/main/java/com/gx/player/: FileInputActivity.kt  MainActivity.kt  PlayerNativeInterface.kt
app/src/main/java/com/gx/player/activities/: FileInputActivity.kt  MainActivity.kt  PlayerActivity.kt
app/src/main/java/com/gx/player/utils/: UriUtils.kt
app/src/main/java/com/gx/player/view/: VideoPlaySurfaceView.kt
app/src/main/res/layout/: activity_file_input.xml  activity_main.xml  activity_player.xml
app/src/main/res/values/: strings.xml
app/src/main/res/xml/: backup_rules.xml  data_extraction_rules.xml
app/src/test/java/com/gx/player/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
